# apollomcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: apollo-api-reference.md  runbook.md  shell-sequence-setup.md
prospecting_mcp/: Dockerfile  server.py  template.yaml
prospecting_mcp/tests/: test_tools_integration.py  test_tools_unit.py
scripts/: bootstrap.sh  deploy.sh  inspect.sh  test_local.sh
sending_mcp/: Dockerfile  server.py  template.yaml
sending_mcp/tests/: test_tools_integration.py  test_tools_unit.py
shared/: apollo_client.py  auth.py  logging.py  models.py
shared/tests/: test_apollo_client.py
