[project]
name = "apollo-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "structlog>=24.1",
  "tenacity>=8.5",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
